Resolve styling issue with blur effects and visibility

--- a/style.css
+++ b/style.css
@@ -100,13 +100,14 @@ h1 {
 
 .utility {
     padding: 5px;
+    margin-right: 20px;
     margin-top: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     float: right;
-    gap: 1.2vmin;
+    gap: 1.9vmin;
 }
 
 .model-content button {
@@ -138,4 +139,35 @@ h1 {
 /* blur-effect*/
 .blur {
     filter: blur(10px);
+}
+
+/* Game draw */
+
+.Dmodel {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    height: auto;
+    background: #ffffff;
+    padding: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    border-radius: 10px;
+    z-index: 10;
+    font-family: "Roboto", serif;
+    font-optical-sizing: auto;
+}
+
+.Dutility {
+    padding: 5px;
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    float: center;
+    gap: 1.2vmin;
 }
